View Issue Details

IDProjectCategoryView StatusLast Update
0026014Open CASCADEOCCT:Visualizationpublic2015-05-14 16:34
ReporterosaAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version6.9.0Fixed in Version6.9.0 
Summary0026014: Visualization - the IsAutoTriangulated flag is ignored for AIS_ColoredShape
DescriptionThe "Tesselate" method is called in both cases: if IsAutoTriangulated is enabled or not.
Steps To Reproducebugs vis bug26014
TagsNo tags attached.
Test case numberbugs vis(004) bug26014

Relationships

child of 0023200 closedbugmaster Community Visualization - prevent multiple triangulating of a shape that already has been triangulated 

Activities

git

2015-04-03 09:48

administrator   ~0039185

Branch CR26014 has been created by osa.

SHA-1: ff714316fc623c1efea409ff2beced0a8a4b0bf4


Detailed log of new commits:

Author: osa
Date: Fri Apr 3 09:48:20 2015 +0300

    0026014: Visualization - the IsAutoTriangulated flag is ignored for AIS_ColoredShape

osa

2015-04-03 09:53

developer   ~0039186

Dear Kirill,
the patch was updated (branch CR26014). Please review.

git

2015-04-03 11:14

administrator   ~0039194

Branch CR26014 has been updated by osa.

SHA-1: 8826b3d5b2b9262c8a26a3ede808f08fb0a840da


Detailed log of new commits:

Author: osa
Date: Fri Apr 3 11:14:11 2015 +0300

    Add test case

kgv

2015-04-03 11:17

developer   ~0039195

Please test the patch.

git

2015-04-06 20:43

administrator   ~0039279

Branch CR26014 has been updated forcibly by mkv.

SHA-1: 5f988f21fc2d2ee09bbcfbbe976a87607056fd29

mkv

2015-04-09 14:44

tester   ~0039494

Dear BugMaster,
Branch CR26014 was rebased on IR-2015-04-06 of occt git-repository.

mkv

2015-04-09 14:45

tester   ~0039495

Dear BugMaster,
Branch CR26014 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 0 (0 on master)

products component :
Linux: 4 (4 on master)
Windows: 0 (0 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
http://occt-tests/CR26014-master-occt-64/Debian60-64/bugs/vis/bug26014.html
http://occt-tests/CR26014-master-occt-64/Windows-64-VC10/bugs/vis/bug26014.html
bugs vis(004) bug26014: OK

Testing on Linux:
occt component :
Total MEMORY difference: 93341746 / 93951660 [-0.65%]
Total CPU difference: 58280.469999999375 / 52005.27999999961 [+12.07%]
products component :
Total MEMORY difference: 23546092 / 23598467 [-0.22%]
Total CPU difference: 18099.349999999948 / 15592.839999999998 [+16.07%]

Testing on Windows:
occt component :
Total MEMORY difference: 56845041 / 56858376 [-0.02%]
Total CPU difference: 16726.177618399033 / 16502.144582299064 [+1.36%]
products component :
Total MEMORY difference: 5436917 / 5435849 [+0.02%]
Total CPU difference: 1873.3380084999976 / 1951.3541085999977 [-4.00%]

There are no differences in images found by testdiff.

mkv

2015-04-09 14:46

tester   ~0039496

Dear BugMaster,
Branch CR26014 is TESTED.

git

2015-05-14 16:34

administrator   ~0041061

Branch CR26014 has been deleted by inv.

SHA-1: 5f988f21fc2d2ee09bbcfbbe976a87607056fd29

Related Changesets

occt: master 306f5893

2015-04-09 13:59:14

osa


Committer: bugmaster Details Diff
0026014: Visualization - the IsAutoTriangulated flag is ignored for AIS_ColoredShape

Add test case
Affected Issues
0026014
mod - src/AIS/AIS_ColoredShape.cxx Diff File
add - tests/bugs/vis/bug26014 Diff File

Issue History

Date Modified Username Field Change
2015-04-03 09:42 osa New Issue
2015-04-03 09:42 osa Assigned To => kgv
2015-04-03 09:46 osa Assigned To kgv => osa
2015-04-03 09:46 osa Status new => assigned
2015-04-03 09:47 kgv Relationship added child of 0023200
2015-04-03 09:48 git Note Added: 0039185
2015-04-03 09:53 osa Note Added: 0039186
2015-04-03 09:53 osa Assigned To osa => kgv
2015-04-03 09:53 osa Status assigned => resolved
2015-04-03 09:53 osa Steps to Reproduce Updated
2015-04-03 11:14 git Note Added: 0039194
2015-04-03 11:15 osa Steps to Reproduce Updated
2015-04-03 11:17 kgv Note Added: 0039195
2015-04-03 11:17 kgv Assigned To kgv => bugmaster
2015-04-03 11:17 kgv Status resolved => reviewed
2015-04-03 14:47 mkv Assigned To bugmaster => mkv
2015-04-06 20:43 git Note Added: 0039279
2015-04-09 14:44 mkv Note Added: 0039494
2015-04-09 14:45 mkv Note Added: 0039495
2015-04-09 14:46 mkv Test case number => bugs vis(004) bug26014
2015-04-09 14:46 mkv Note Added: 0039496
2015-04-09 14:46 mkv Assigned To mkv => bugmaster
2015-04-09 14:46 mkv Status reviewed => tested
2015-04-10 14:09 bugmaster Changeset attached => occt master 306f5893
2015-04-10 14:09 bugmaster Status tested => verified
2015-04-10 14:09 bugmaster Resolution open => fixed
2015-05-14 15:28 aiv Status verified => closed
2015-05-14 15:31 aiv Fixed in Version => 6.9.0
2015-05-14 16:34 git Note Added: 0041061