0026014: Visualization - the IsAutoTriangulated flag is ignored for AIS_ColoredShape

Add test case